--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ flutter:
       - assets/images/logo_2.png
       - assets/images/htp_1.gif
       - assets/images/htp_2.gif
+      - assets/images/LOGO_512x512.png
+      - assets/images/LOGO_1024x1024.png
       - lang/en.json
       - lang/ja.json
       - lang/es.json
