Fix some properties

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Mariners Color Notes",
-  "short_name": "Mariners Color Notes",
+  "name": "Mariners Coloring Notes",
+  "short_name": "Mariners Coloring Notes",
   "theme_color": "#005c5c",
   "background_color": "#0c2c56",
   "display": "standalone",
