--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mariners_coloring_notes
-description: A new Flutter project.
+description: Seattle Mariners coloring book app developed with Flutter for Web.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
